loadbalancing/csharp/build/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-services
  labels:
    app.kubernetes.io/part-of: grpc-services
