loadbalancing/csharp/build/deploy/greetclient-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetclient-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greetclient
  template:
    metadata:
      labels:
        app: greetclient
    spec:
      containers:
        - image: mrstefangrimm/greet-client
          name: greetclient
          ports:
            - containerPort: 9091
