loadbalancing/csharp/build/deploy/greetserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetserver-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greetserver
  template:
    metadata:
      labels:
        app: greetserver
    spec:
      containers:
        - image: mrstefangrimm/greet-server
          imagePullPolicy: IfNotPresent
          name: greetserver
          ports:
            - containerPort: 50051
