loadbalancing/csharp/build/deploy/greetserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: greetserver
  name: greetserver
  namespace: default
spec:
  containers:
    - image: hiteshpattanayak/greet-server:1.0
      imagePullPolicy: IfNotPresent
      name: greetserver
      ports:
        - containerPort: 50051
