loadbalancing/csharp/build/deploy/greetserver.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: greetserver
  name: greetserver
spec:
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: greetserver
  clusterIP: None
